--- a/css/components/post.css
+++ b/css/components/post.css
@@ -62,10 +62,10 @@
     display: flex;
     flex-wrap: wrap;
     list-style-position: inside;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 1rem;
     margin: 1rem;
-    width: 60%;
+    width: 90%;
 }
 
 .post ul li {
@@ -98,4 +98,10 @@
     display: list-item;
     list-style-position: inside;
       
+}
+
+@media (max-width: 440px) {
+    .post .description, blockquote, .post ol {
+        width: 90%;
+    }
 }
